--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -176,7 +176,8 @@
   },
   "STATISTICS": {
     "INGREDIENTS": "Istoric Ingrediente",
-    "PRODUCTS": "Istoric Mâncăruri"
+    "PRODUCTS": "Istoric Preparate",
+    "CONSUMPTION_CHART": "Diagramă Consumații"
   },
   "RECIPE": {
     "NO_CATEGORIES": "Fără categorii",
